# django_multiple_permissions

./: LICENCE  MANIFEST.in  README.md  index.md  requirements.txt  setup.cfg
docs/: README.md
multiple_permissions/: __init__.py  middlewares.py  permissions.py
multiple_permissions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
