[metadata]
name = multiple_permissions
version = 0.1.9
description = Use multiple permission classes in django class based views.
long_description_content_type = text/markdown; charset=UTF-8
long_description = file: README.md
url = https://github.com/aram2726/django_multiple_permissions
keywords = django multiple permissions use many permission python rest framework
author = Aram Haroyan
author_email = aramharoyan@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.*
    Framework :: Django :: 3.*
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
